Pull harvester-ros and harvester-python from git repo instead of nfs

--- a/harvester_project_build/Dockerfile
+++ b/harvester_project_build/Dockerfile
@@ -5,7 +5,7 @@ LABEL maintainer="Jonathon Sather"
 # Mods by Jonathon Sather:
 #    - Added NVIDIA software CUDA + CUDnn to set up for Tensorflow-gpu install
 #    - Added additional ROS packages/Moveit and set up catkin workspace
-#    - Set up harvester-ros and harvester-python repositories
+#    - Added harvester-python and harvester-ros
 
 ARG SOURCEFORGE=https://sourceforge.net/projects
 ARG TURBOVNC_VERSION=2.1.2
@@ -132,10 +132,16 @@ RUN sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb
     wget http://packages.osrfoundation.org/gazebo.key -O - | apt-key add - && \
     apt-get update -y && apt-get install -y gazebo7
 
-# Set up harvester-ros
+# Clone harvester-python and harvester-ros repositories
+RUN mkdir -p /root/git && \
+    cd /root/git && \
+    git clone https://github.com/jsather/harvester-python.git
+    git clone https://github.com/jsather/harvester-sim.git
+
+# Create ROS workspace for harvester-ros
 RUN /bin/bash -c "mkdir -p /root/catkin_ws/src ;\
                   mkdir -p /mnt/nfs/harvester-ros ;\
-                  ln -sf /mnt/nfs/harvester-ros /root/catkin_ws/src/ ;\
+                  ln -sf /mnt/git/harvester-ros /root/catkin_ws/src/ ;\
                   cd /root/catkin_ws ;\
                   catkin_make"
 
@@ -151,7 +157,7 @@ RUN pip install tensorflow-gpu
 
 # Set up harvester-python
 COPY ./gpu_config.py /mnt/nfs/harvester_python/config.py
-RUN cd /mnt/nfs/harvester_python && \
+RUN cd /mnt/git/harvester_python && \
     python setup.py build_ext --inplace
 
 # Update .bashrc
